feat: add jobs management api and revert rapidapi changes
